--- a/app/src/main/res/layout/activity_user_street_food.xml
+++ b/app/src/main/res/layout/activity_user_street_food.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminViewUsers">
+    tools:context=".UserStreetFood">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addStreetVendor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="@string/todo"
+        android:elevation="8dp"
+        android:hapticFeedbackEnabled="true"
+        android:src="@drawable/ic_add_new_item"
+        android:layout_above="@id/bottom_nav"
+        android:layout_alignParentEnd="true"/>
 
     <ListView
         android:id="@+id/listView"
@@ -12,14 +25,14 @@
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"/>
 
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         app:itemBackground="@color/colorAccent"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/admin_menu" />
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/menu_nav_bar" />
 </RelativeLayout>
