--- a/app/src/main/res/layout/activity_add_street_food.xml
+++ b/app/src/main/res/layout/activity_add_street_food.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserProfile">
-
+    tools:context=".AddStreetFoodActivity">
     <ImageView
-        android:id="@+id/restaurantImage"
-        android:layout_width="120dp"
+        android:id="@+id/vendor_image"
+        android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
@@ -20,21 +19,21 @@
         android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/userProfile"
+        android:id="@+id/restaurantDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="40dp"
-        android:text="Your Profile"
+        android:text="@string/add_a_street_vendor"
         android:textSize="20sp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/restaurantImage" />
+        app:layout_constraintTop_toBottomOf="@+id/vendor_image" />
 
     <EditText
-        android:id="@+id/first_name"
+        android:id="@+id/name_of_vendor"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -42,13 +41,14 @@
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:inputType="text"
+        android:hint="@string/restaurant_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userProfile"
+        app:layout_constraintTop_toBottomOf="@+id/restaurantDetails"
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/surname"
+        android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -56,45 +56,49 @@
         android:layout_marginEnd="10dp"
         android:inputType="text"
         android:ems="10"
+        android:hint="@string/url"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_name"
+        app:layout_constraintTop_toBottomOf="@+id/name_of_vendor"
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/vendor_description"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:inputType="textEmailAddress"
         android:ems="10"
+        android:inputType="text"
+        android:hint="@string/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/surname"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/location"
+        android:autofillHints="" />
 
     <Button
+        android:id="@+id/add_vendor"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="#0ED6B9"
+        android:text="@string/add_restaurant"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="30dp"
-        android:text="Update Profile"
-        android:id="@+id/profileUpdate"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
         />
-
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorAccent"
-        app:itemIconTint="@drawable/selector"
-        app:itemTextColor="@drawable/selector"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_nav_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
